feat: init basic scene [#1]

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>R3F Computer-Webcam Effect</title>
   </head>
-  <body class="">
-    <div id="root" class=""></div>
+  <body class="w-screen h-screen bg-gradient-to-t from-accent-primary to-accent-secondary">
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="./js/main.tsx"></script>
   </body>
 </html>
